<resources>
    <string name="global_try_again">Tentar novamente</string>
    <string name="global_cancel">Cancelar</string>
    <string name="global_do_login">Fazer login</string>
    <string name="global_ok">OK</string>
    <string name="global_facebook">Facebook</string>
    <string name="global_google">Google</string>
    <string name="global_or">Ou</string>
    <string name="global_yes">Sim</string>
    <string name="global_no">Não</string>
    <string name="global_not_found">Nenhum resultado encontrado</string>
    <string name="global_question_action">Ajuda</string>

    <string name="error_title">Oops!</string>
    <string name="error_unknown">Não foi possível completar a operação. Tente novamente mais tarde. Se o problema
        persistir entre em contato conosco.
    </string>
    <string name="error_network">Não foi possível completar a operação. Verifique sua conexão e tente novamente.
    </string>
    <string name="error_unprocessable">Não foi possível completar a operação. Os seguintes problemas foram
        encontrados:\n\n%s
    </string>
    <string name="error_unauthorized_login_now">Não foi possível completar a operação. Sua sessão expirou. Por favor
        faça login novamente.
    </string>
    <string name="error_expired_classkey">Sua chave de acesso expirou. Entre com a nova chave de acesso</string>
    <string name="error_not_found">Não encontrado</string>
    <string name="error_server_internal">Não foi possível completar a operação. Tente novamente mais tarde. Se o
        problema persistir entre em contato conosco.
    </string>
    <string name="error_timeout">Tempo expirado. Por favor, tente novamente.</string>
    <string name="error_invalid_fields">Ops, parece que um ou mais campos não foram preenchidos corretamente.</string>

    <string name="activity_login_error">Email ou senha errados.</string>
    <string name="global_wait">Aguarde...</string>

    <string name="validation_name">Nome inválido</string>
    <string name="validation_email">Email inválido</string>
    <string name="validation_phone_number">Número de telefone inválido</string>
    <string name="validation_cpf">CPF inválido</string>
    <string name="validation_password">Senha inválida</string>
    <string name="validation_password_confirmation">Confirmação diferente da senha</string>
    <string name="activity_login_sign_in_with">Faça login com</string>

    <string name="hint_group">Turma</string>
    <string name="hint_class_code">Chave de acesso</string>
    <string name="hint_name">Nome</string>

    <string name="activity_login_sign_in">Acessar</string>
    <string name="activity_login_sign_up">Criar uma conta</string>
    <string name="activity_login_forgot_password">Esqueci minha senha</string>
    <string name="activity_login_please_wait_for_result">Aguarde o resultado do login para prosseguir.</string>

    <string name="activity_register">Cadastro</string>
    <string name="activity_register_choose_picture">Escolher foto</string>

    <string name="hint_full_name">Nome Completo</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_password_confirmation">Confirmar senha</string>

    <string name="activity_register_submit">Finalizar cadastro</string>

    <string name="activity_recover_password">Recuperar senha</string>
    <string name="activity_recover_password_inform_email">Informe o seu email para recuperar sua senha</string>
    <string name="activity_recover_password_send">Enviar</string>
    <string name="activity_recover_password_success">Verifique a sua caixa de entrada e siga as instruções do email para
        recuperar sua senha.
    </string>

    <string name="error_facebook_sdk">O Facebook não nos devolveu nenhuma informação para realizar o login. Por favor,
        tente novamente.
    </string>
    <string name="error_facebook_denied_permissions">É necessário aceitar todas as permissões no Facebook para realizar
        o login. Por favor, tente novamente.
    </string>

    <string name="error_invalid_group">Turma Inválida</string>
    <string name="error_invalid_name">Nome Inválido</string>

    <string name="global_send">Enviar</string>
    <string name="global_pick_avatar_using">Escolher imagem usando:</string>

    <string name="activity_sign_up">Criar Conta</string>

    <string name="activity_homework_label">Sala de aula invertida</string>
    <string name="activity_notice_label">Avisos</string>
    <string name="activity_settings_label">Configurações</string>
    <string name="activity_news_label">Notícias</string>
    <string name="summarize_three_dots_template">%s ...</string>


    <!--
        MAIN ACTIVITY
    -->
    <string name="main">Colégio Machado de Assis</string>
    <string name="notice">Avisos</string>
    <string name="homework">Sala de Aula Invertida</string>
    <string name="news">Notícias</string>
    <string name="bullying">Denúncia de Bullying</string>
    <string name="guild">Grêmio Estudantil</string>
    <string name="calendar">Calendário</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre a Escola</string>
    <string name="error_image_decode">Imagem não pode ser carregada</string>
    <string name="principal">Principal</string>
    <string name="topics">Biblioteca</string>
    <string name="teachers">Professores</string>

    <!--
        HELP TEXTS
    -->
    <string name="help_main_title">Tela principal</string>
    <string name="help_main_description">Aqui é onde são acessadas as outras partes do aplicativo</string>

    <string name="help_notice_list_title">Avisos</string>
    <string name="help_notice_list_description">Aqui é onde você encontra os avisos da escola</string>

    <string name="help_notice_details_title">Avisos - Detalhes</string>
    <string name="help_notice_details_description">Aqui é onde você encontra os  detalhes do Aviso escolhido</string>

    <string name="help_homework_list_title">Listagem da Sala de Aula Invertida</string>
    <string name="help_homework_list_description">Aqui está listado todo o material disponibilizado pelo professor</string>

    <string name="help_homework_details_title">Sala de aula invertida - Material</string>
    <string name="help_homework_details_description">Aqui é onde você encontra detalhes do material escolhido</string>

    <string name="help_calendar_title">Calendário</string>
    <string name="help_calendar_description">Aqui é onde você encontra vê o calendário da escola</string>

    <string name="help_news_list_title">Noticias</string>
    <string name="help_news_list_description">Aqui é onde você encontra as notícias da escola</string>

    <string name="help_settings_title">Configurações</string>
    <string name="help_settings_description">Aqui é onde configura-se as notificações e sai do aplicativo</string>

    <string name="help_bullying_title">Denúncia de bullying</string>
    <string name="help_bullying_description">Aqui é possível realizar uma denúncia anônima de bullying</string>

    <string name="help_guild_title">Grêmio</string>
    <string name="help_guild_description">Aqui é onde você encontra uma votação para o grêmio escolar</string>

    <string name="help_about_title">Sobre a escola</string>
    <string name="help_about_description">Aqui é onde você encontra informações sobre a escola</string>

    <string name="library_topics_title">Biblioteca</string>
    <string name="library_topics_description">Aqui é onde você encontra Podcasts, downloads e vídeos interessantes</string>

    <string name="library_libresources_title">Biblioteca</string>
    <string name="library_libresources_description">Aqui é onde você encontra Podcasts, downloads e vídeos interessantes</string>

    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>
</resources>
