<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/img_bg">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="72dp"
                        app:srcCompat="@mipmap/ic_launcher"/>

                <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:text="@string/activity_login_sign_in_with"
                        android:textColor="@color/colorLightTextPrimary"
                        android:textSize="14sp"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/group_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:textColorHint="@color/colorLightHint">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_group"
                            android:textColor="@color/colorLightTextPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/colorLightHint">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            android:inputType="textPersonName"
                            android:textColor="@color/colorLightTextPrimary"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/submit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/activity_login_sign_in"/>
            </LinearLayout>

            <include
                    android:id="@+id/placeholder"
                    layout="@layout/loading_placeholder"
                    tools:visibility="gone"/>
        </FrameLayout>
    </ScrollView>
</layout>
