<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="placeholder"
            type="com.ufms.mediadorpedagogico.presentation.util.viewmodels.Placeholder" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_alpha30"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/normal"
                tools:context=".presentation.main.dashboard.DashboardActivity">

                <LinearLayout
                    android:id="@+id/card_view_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/card_view_clickable"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/new_notices" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/notice" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_homework"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/card_view_clickable"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/new_homeworks" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/homework" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:background="@drawable/card_view_clickable"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/new_news" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/news"
                        tools:text="Notícias" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:background="@drawable/card_view_clickable"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_view_homework">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/new_calendar" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/calendar" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_bullying"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:background="@drawable/card_view_clickable"
                    app:layout_constraintEnd_toEndOf="@id/card_view_homework"
                    app:layout_constraintStart_toStartOf="@id/card_view_homework"
                    app:layout_constraintTop_toBottomOf="@id/card_view_homework">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:backgroundTint="@color/ic_bullying_background"
                        android:src="@mipmap/ic_bullying_round" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/bullying" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_guild"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/card_view_bullying">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/card_view_clickable"
                        android:backgroundTint="@color/ic_guild_background"
                        android:src="@mipmap/ic_guild_foreground" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/guild" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_view_bullying">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/new_library" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/topics" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="@id/card_view_bullying"
                    app:layout_constraintEnd_toEndOf="@id/card_view_bullying"
                    app:layout_constraintTop_toBottomOf="@id/card_view_bullying">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/about"
                        android:src="@drawable/about" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:lines="2"
                        android:text="@string/about" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_view_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_view_bullying">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/card_view_clickable"
                        android:backgroundTint="@color/ic_settings_background"
                        android:src="@mipmap/ic_settings" />

                    <TextView
                        style="@style/TextLabelWhateverBoldMainLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/settings" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <include
            android:id="@+id/loading_placeholder"
            layout="@layout/loading_placeholder"
            tools:visibility="gone" />

        <include
            android:id="@+id/included_placeholder_no_results"
            layout="@layout/no_results_placeholder"
            tools:visibility="gone" />
    </FrameLayout>
</layout>
